tp2/src/Frontend/Parser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> ProgramStart                      (0)
	ProgramStart -> Program                            (1)
	Program -> Program Id '(' FArgs ')' RetValsStart CodeBlock   (2)
	Program -> Program 'data' Id '{' DataDecl '}'      (3)
	Program ->                                         (4)
	DataDecl -> DataDecl Id '::' PTy ';'               (5)
	DataDecl -> DataDecl Id '::' Id ';'                (6)
	DataDecl -> Id '::' PTy ';'                        (7)
	DataDecl -> Id '::' Id ';'                         (8)
	FArgs -> FArgs ',' Id '::' PTy                     (9)
	FArgs -> Id '::' PTy                               (10)
	FArgs ->                                           (11)
	RetValsStart -> ':' RetVals                        (12)
	RetValsStart ->                                    (13)
	RetVals -> RetVals ',' PTy                         (14)
	RetVals -> PTy                                     (15)
	CodeBlock -> '{' StmtList '}'                      (16)
	StmtList -> StmtList Stmt                          (17)
	StmtList ->                                        (18)
	Stmt -> 'skip' ';'                                 (19)
	Stmt -> IdAtrib '=' Exp ';'                        (20)
	Stmt -> MultAtrib '=' Id '(' Exps1 ')' '[' Exps1 ']' ';'   (21)
	Stmt -> Id '::' PTy ';'                            (22)
	Stmt -> RegistS '=' Exp ';'                        (23)
	Stmt -> Id '::' Id ';'                             (24)
	Stmt -> 'if' Exp 'then' CodeBlock                  (25)
	Stmt -> 'if' Exp 'then' CodeBlock 'else' CodeBlock   (26)
	Stmt -> 'print' Exp ';'                            (27)
	Stmt -> 'read' Id ';'                              (28)
	Stmt -> 'iterate' Exp CodeBlock                    (29)
	Stmt -> 'return' Exps1 ';'                         (30)
	Stmt -> Id '(' Exps1 ')' FuncReturns ';'           (31)
	MultAtrib -> IdAtrib ',' MultAtrib1                (32)
	MultAtrib -> RegistS ',' MultAtrib1                (33)
	MultAtrib1 -> IdAtrib ',' MultAtrib1               (34)
	MultAtrib1 -> RegistS ',' MultAtrib1               (35)
	MultAtrib1 -> RegistS                              (36)
	MultAtrib1 -> IdAtrib                              (37)
	IdAtrib -> id                                      (38)
	IdAtrib -> id '[' Exps ']'                         (39)
	Id -> id                                           (40)
	RegistS -> Regist '.' Id                           (41)
	RegistS -> Regist '.' id '@' '[' Exps ']'          (42)
	Regist -> Regist '.' Id                            (43)
	Regist -> Regist '.' id '@' '[' Exps ']'           (44)
	Regist -> Id                                       (45)
	FuncReturns -> '<' Ids '>'                         (46)
	FuncReturns ->                                     (47)
	Ids -> Ids ',' Id                                  (48)
	Ids -> Ids ',' RegistS                             (49)
	Ids -> Id                                          (50)
	Ids -> RegistS                                     (51)
	Ids ->                                             (52)
	NewDecl -> 'Int'                                   (53)
	NewDecl -> 'Bool'                                  (54)
	NewDecl -> 'Char'                                  (55)
	NewDecl -> 'Float'                                 (56)
	NewDecl -> id                                      (57)
	PTy -> 'Int'                                       (58)
	PTy -> 'Bool'                                      (59)
	PTy -> 'Char'                                      (60)
	PTy -> 'Float'                                     (61)
	PTy -> '@' id                                      (62)
	PTy -> ArrayTy                                     (63)
	ArrayTy -> id '[' ']'                              (64)
	ArrayTy -> 'Int' '[' ']'                           (65)
	ArrayTy -> 'Bool' '[' ']'                          (66)
	ArrayTy -> 'Char' '[' ']'                          (67)
	ArrayTy -> 'Float' '[' ']'                         (68)
	Exps -> Exps ',' Exp                               (69)
	Exps -> Exp                                        (70)
	Exps -> '@'                                        (71)
	Exps1 -> Exps1 ',' Exp                             (72)
	Exps1 -> Exp                                       (73)
	Exps1 ->                                           (74)
	Exp -> num                                         (75)
	Exp -> floatNum                                    (76)
	Exp -> char                                        (77)
	Exp -> 'true'                                      (78)
	Exp -> 'false'                                     (79)
	Exp -> 'null'                                      (80)
	Exp -> Id                                          (81)
	Exp -> Exp '+' Exp                                 (82)
	Exp -> Exp '*' Exp                                 (83)
	Exp -> Exp '-' Exp                                 (84)
	Exp -> Exp '/' Exp                                 (85)
	Exp -> Exp '<' Exp                                 (86)
	Exp -> Exp '==' Exp                                (87)
	Exp -> Exp '!=' Exp                                (88)
	Exp -> Exp '%' Exp                                 (89)
	Exp -> Exp '&&' Exp                                (90)
	Exp -> '-' Exp                                     (91)
	Exp -> Exp '[' Exp ']'                             (92)
	Exp -> Id '(' Exps1 ')' '[' Exps1 ']'              (93)
	Exp -> '!' Exp                                     (94)
	Exp -> '(' Exp ')'                                 (95)
	Exp -> RegistS                                     (96)
	Exp -> 'new' NewDecl '[' Exps1 ']'                 (97)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	floatNum       { (FLOAT $$) }
	num            { (INT $$) }
	char           { (CHAR $$) }
	'true'         { (BOOL True) }
	'false'        { (BOOL False) }
	'null'         { NULL }
	'Int'          { INTTYPE }
	'Char'         { CHARTYPE }
	'Bool'         { BOOLTYPE }
	'Float'        { FLOATTYPE }
	'data'         { DATA }
	'new'          { NEW }
	'read'         { READ }
	'print'        { PRINT }
	'if'           { IF }
	'then'         { THEN }
	'else'         { ELSE }
	'return'       { RETURN }
	'iterate'      { ITERATE }
	'skip'         { SKIP }
	'&&'           { AND }
	'=='           { EQUAL }
	'!='           { DIFTHAN }
	'::'           { TYPEOF }
	'+'            { PLUS }
	'-'            { MINUS }
	'*'            { MULT }
	'/'            { DIV }
	'%'            { MODULO }
	'!'            { NOT }
	'<'            { LESSTHAN }
	'>'            { GREATERTHAN }
	'('            { OPENPARENS }
	')'            { CLOSEPARENS }
	'{'            { OPENBRACES }
	'}'            { CLOSEBRACES }
	'['            { OPENBRACKETS }
	']'            { CLOSEBRACKETS }
	';'            { SEMICOLON }
	'='            { ATTRIBUTION }
	':'            { COLON }
	','            { COMMA }
	'.'            { DOT }
	'@'            { AT }
	id             { (ID $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	ProgramStart    rule  1
	Program         rules 2, 3, 4
	DataDecl        rules 5, 6, 7, 8
	FArgs           rules 9, 10, 11
	RetValsStart    rules 12, 13
	RetVals         rules 14, 15
	CodeBlock       rule  16
	StmtList        rules 17, 18
	Stmt            rules 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31
	MultAtrib       rules 32, 33
	MultAtrib1      rules 34, 35, 36, 37
	IdAtrib         rules 38, 39
	Id              rule  40
	RegistS         rules 41, 42
	Regist          rules 43, 44, 45
	FuncReturns     rules 46, 47
	Ids             rules 48, 49, 50, 51, 52
	NewDecl         rules 53, 54, 55, 56, 57
	PTy             rules 58, 59, 60, 61, 62, 63
	ArrayTy         rules 64, 65, 66, 67, 68
	Exps            rules 69, 70, 71
	Exps1           rules 72, 73, 74
	Exp             rules 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parser -> . ProgramStart                     (rule 0)

	'data'         reduce using rule 4
	id             reduce using rule 4
	%eof           reduce using rule 4

	ProgramStart   goto state 3
	Program        goto state 2

State 1

	ProgramStart -> . Program                           (rule 1)


	Program        goto state 2

State 2

	ProgramStart -> Program .                           (rule 1)
	Program -> Program . Id '(' FArgs ')' RetValsStart CodeBlock    (rule 2)
	Program -> Program . 'data' Id '{' DataDecl '}'     (rule 3)

	'data'         shift, and enter state 5
	id             shift, and enter state 6
	%eof           reduce using rule 1

	Id             goto state 4

State 3

	%start_parser -> ProgramStart .                     (rule 0)

	%eof           accept


State 4

	Program -> Program Id . '(' FArgs ')' RetValsStart CodeBlock    (rule 2)

	'('            shift, and enter state 8


State 5

	Program -> Program 'data' . Id '{' DataDecl '}'     (rule 3)

	id             shift, and enter state 6

	Id             goto state 7

State 6

	Id -> id .                                          (rule 40)

	'then'         reduce using rule 40
	'&&'           reduce using rule 40
	'=='           reduce using rule 40
	'!='           reduce using rule 40
	'::'           reduce using rule 40
	'+'            reduce using rule 40
	'-'            reduce using rule 40
	'*'            reduce using rule 40
	'/'            reduce using rule 40
	'%'            reduce using rule 40
	'<'            reduce using rule 40
	'>'            reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	'{'            reduce using rule 40
	'['            reduce using rule 40
	']'            reduce using rule 40
	';'            reduce using rule 40
	','            reduce using rule 40
	'.'            reduce using rule 40


State 7

	Program -> Program 'data' Id . '{' DataDecl '}'     (rule 3)

	'{'            shift, and enter state 11


State 8

	Program -> Program Id '(' . FArgs ')' RetValsStart CodeBlock    (rule 2)

	')'            reduce using rule 11
	','            reduce using rule 11
	id             shift, and enter state 6

	FArgs          goto state 9
	Id             goto state 10

State 9

	Program -> Program Id '(' FArgs . ')' RetValsStart CodeBlock    (rule 2)
	FArgs -> FArgs . ',' Id '::' PTy                    (rule 9)

	')'            shift, and enter state 15
	','            shift, and enter state 16


State 10

	FArgs -> Id . '::' PTy                              (rule 10)

	'::'           shift, and enter state 14


State 11

	Program -> Program 'data' Id '{' . DataDecl '}'     (rule 3)

	id             shift, and enter state 6

	DataDecl       goto state 12
	Id             goto state 13

State 12

	Program -> Program 'data' Id '{' DataDecl . '}'     (rule 3)
	DataDecl -> DataDecl . Id '::' PTy ';'              (rule 5)
	DataDecl -> DataDecl . Id '::' Id ';'               (rule 6)

	'}'            shift, and enter state 30
	id             shift, and enter state 6

	Id             goto state 29

State 13

	DataDecl -> Id . '::' PTy ';'                       (rule 7)
	DataDecl -> Id . '::' Id ';'                        (rule 8)

	'::'           shift, and enter state 28


State 14

	FArgs -> Id '::' . PTy                              (rule 10)

	'Int'          shift, and enter state 22
	'Char'         shift, and enter state 23
	'Bool'         shift, and enter state 24
	'Float'        shift, and enter state 25
	'@'            shift, and enter state 26
	id             shift, and enter state 27

	PTy            goto state 20
	ArrayTy        goto state 21

State 15

	Program -> Program Id '(' FArgs ')' . RetValsStart CodeBlock    (rule 2)

	'{'            reduce using rule 13
	':'            shift, and enter state 19

	RetValsStart   goto state 18

State 16

	FArgs -> FArgs ',' . Id '::' PTy                    (rule 9)

	id             shift, and enter state 6

	Id             goto state 17

State 17

	FArgs -> FArgs ',' Id . '::' PTy                    (rule 9)

	'::'           shift, and enter state 45


State 18

	Program -> Program Id '(' FArgs ')' RetValsStart . CodeBlock    (rule 2)

	'{'            shift, and enter state 44

	CodeBlock      goto state 43

State 19

	RetValsStart -> ':' . RetVals                       (rule 12)

	'Int'          shift, and enter state 22
	'Char'         shift, and enter state 23
	'Bool'         shift, and enter state 24
	'Float'        shift, and enter state 25
	'@'            shift, and enter state 26
	id             shift, and enter state 27

	RetVals        goto state 41
	PTy            goto state 42
	ArrayTy        goto state 21

State 20

	FArgs -> Id '::' PTy .                              (rule 10)

	')'            reduce using rule 10
	','            reduce using rule 10


State 21

	PTy -> ArrayTy .                                    (rule 63)

	')'            reduce using rule 63
	'{'            reduce using rule 63
	';'            reduce using rule 63
	','            reduce using rule 63


State 22

	PTy -> 'Int' .                                      (rule 58)
	ArrayTy -> 'Int' . '[' ']'                          (rule 65)

	')'            reduce using rule 58
	'{'            reduce using rule 58
	'['            shift, and enter state 40
	';'            reduce using rule 58
	','            reduce using rule 58


State 23

	PTy -> 'Char' .                                     (rule 60)
	ArrayTy -> 'Char' . '[' ']'                         (rule 67)

	')'            reduce using rule 60
	'{'            reduce using rule 60
	'['            shift, and enter state 39
	';'            reduce using rule 60
	','            reduce using rule 60


State 24

	PTy -> 'Bool' .                                     (rule 59)
	ArrayTy -> 'Bool' . '[' ']'                         (rule 66)

	')'            reduce using rule 59
	'{'            reduce using rule 59
	'['            shift, and enter state 38
	';'            reduce using rule 59
	','            reduce using rule 59


State 25

	PTy -> 'Float' .                                    (rule 61)
	ArrayTy -> 'Float' . '[' ']'                        (rule 68)

	')'            reduce using rule 61
	'{'            reduce using rule 61
	'['            shift, and enter state 37
	';'            reduce using rule 61
	','            reduce using rule 61


State 26

	PTy -> '@' . id                                     (rule 62)

	id             shift, and enter state 36


State 27

	ArrayTy -> id . '[' ']'                             (rule 64)

	'['            shift, and enter state 35


State 28

	DataDecl -> Id '::' . PTy ';'                       (rule 7)
	DataDecl -> Id '::' . Id ';'                        (rule 8)

	'Int'          shift, and enter state 22
	'Char'         shift, and enter state 23
	'Bool'         shift, and enter state 24
	'Float'        shift, and enter state 25
	'@'            shift, and enter state 26
	id             shift, and enter state 34

	Id             goto state 32
	PTy            goto state 33
	ArrayTy        goto state 21

State 29

	DataDecl -> DataDecl Id . '::' PTy ';'              (rule 5)
	DataDecl -> DataDecl Id . '::' Id ';'               (rule 6)

	'::'           shift, and enter state 31


State 30

	Program -> Program 'data' Id '{' DataDecl '}' .     (rule 3)

	'data'         reduce using rule 3
	id             reduce using rule 3
	%eof           reduce using rule 3


State 31

	DataDecl -> DataDecl Id '::' . PTy ';'              (rule 5)
	DataDecl -> DataDecl Id '::' . Id ';'               (rule 6)

	'Int'          shift, and enter state 22
	'Char'         shift, and enter state 23
	'Bool'         shift, and enter state 24
	'Float'        shift, and enter state 25
	'@'            shift, and enter state 26
	id             shift, and enter state 34

	Id             goto state 56
	PTy            goto state 57
	ArrayTy        goto state 21

State 32

	DataDecl -> Id '::' Id . ';'                        (rule 8)

	';'            shift, and enter state 55


State 33

	DataDecl -> Id '::' PTy . ';'                       (rule 7)

	';'            shift, and enter state 54


State 34

	Id -> id .                                          (rule 40)
	ArrayTy -> id . '[' ']'                             (rule 64)

	'['            shift, and enter state 35
	';'            reduce using rule 40


State 35

	ArrayTy -> id '[' . ']'                             (rule 64)

	']'            shift, and enter state 53


State 36

	PTy -> '@' id .                                     (rule 62)

	')'            reduce using rule 62
	'{'            reduce using rule 62
	';'            reduce using rule 62
	','            reduce using rule 62


State 37

	ArrayTy -> 'Float' '[' . ']'                        (rule 68)

	']'            shift, and enter state 52


State 38

	ArrayTy -> 'Bool' '[' . ']'                         (rule 66)

	']'            shift, and enter state 51


State 39

	ArrayTy -> 'Char' '[' . ']'                         (rule 67)

	']'            shift, and enter state 50


State 40

	ArrayTy -> 'Int' '[' . ']'                          (rule 65)

	']'            shift, and enter state 49


State 41

	RetValsStart -> ':' RetVals .                       (rule 12)
	RetVals -> RetVals . ',' PTy                        (rule 14)

	'{'            reduce using rule 12
	','            shift, and enter state 48


State 42

	RetVals -> PTy .                                    (rule 15)

	'{'            reduce using rule 15
	','            reduce using rule 15


State 43

	Program -> Program Id '(' FArgs ')' RetValsStart CodeBlock .    (rule 2)

	'data'         reduce using rule 2
	id             reduce using rule 2
	%eof           reduce using rule 2


State 44

	CodeBlock -> '{' . StmtList '}'                     (rule 16)

	'read'         reduce using rule 18
	'print'        reduce using rule 18
	'if'           reduce using rule 18
	'return'       reduce using rule 18
	'iterate'      reduce using rule 18
	'skip'         reduce using rule 18
	'}'            reduce using rule 18
	id             reduce using rule 18

	StmtList       goto state 47

State 45

	FArgs -> FArgs ',' Id '::' . PTy                    (rule 9)

	'Int'          shift, and enter state 22
	'Char'         shift, and enter state 23
	'Bool'         shift, and enter state 24
	'Float'        shift, and enter state 25
	'@'            shift, and enter state 26
	id             shift, and enter state 27

	PTy            goto state 46
	ArrayTy        goto state 21

State 46

	FArgs -> FArgs ',' Id '::' PTy .                    (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9


State 47

	CodeBlock -> '{' StmtList . '}'                     (rule 16)
	StmtList -> StmtList . Stmt                         (rule 17)

	'read'         shift, and enter state 67
	'print'        shift, and enter state 68
	'if'           shift, and enter state 69
	'return'       shift, and enter state 70
	'iterate'      shift, and enter state 71
	'skip'         shift, and enter state 72
	'}'            shift, and enter state 73
	id             shift, and enter state 74

	Stmt           goto state 61
	MultAtrib      goto state 62
	IdAtrib        goto state 63
	Id             goto state 64
	RegistS        goto state 65
	Regist         goto state 66

State 48

	RetVals -> RetVals ',' . PTy                        (rule 14)

	'Int'          shift, and enter state 22
	'Char'         shift, and enter state 23
	'Bool'         shift, and enter state 24
	'Float'        shift, and enter state 25
	'@'            shift, and enter state 26
	id             shift, and enter state 27

	PTy            goto state 60
	ArrayTy        goto state 21

State 49

	ArrayTy -> 'Int' '[' ']' .                          (rule 65)

	')'            reduce using rule 65
	'{'            reduce using rule 65
	';'            reduce using rule 65
	','            reduce using rule 65


State 50

	ArrayTy -> 'Char' '[' ']' .                         (rule 67)

	')'            reduce using rule 67
	'{'            reduce using rule 67
	';'            reduce using rule 67
	','            reduce using rule 67


State 51

	ArrayTy -> 'Bool' '[' ']' .                         (rule 66)

	')'            reduce using rule 66
	'{'            reduce using rule 66
	';'            reduce using rule 66
	','            reduce using rule 66


State 52

	ArrayTy -> 'Float' '[' ']' .                        (rule 68)

	')'            reduce using rule 68
	'{'            reduce using rule 68
	';'            reduce using rule 68
	','            reduce using rule 68


State 53

	ArrayTy -> id '[' ']' .                             (rule 64)

	')'            reduce using rule 64
	'{'            reduce using rule 64
	';'            reduce using rule 64
	','            reduce using rule 64


State 54

	DataDecl -> Id '::' PTy ';' .                       (rule 7)

	'}'            reduce using rule 7
	id             reduce using rule 7


State 55

	DataDecl -> Id '::' Id ';' .                        (rule 8)

	'}'            reduce using rule 8
	id             reduce using rule 8


State 56

	DataDecl -> DataDecl Id '::' Id . ';'               (rule 6)

	';'            shift, and enter state 59


State 57

	DataDecl -> DataDecl Id '::' PTy . ';'              (rule 5)

	';'            shift, and enter state 58


State 58

	DataDecl -> DataDecl Id '::' PTy ';' .              (rule 5)

	'}'            reduce using rule 5
	id             reduce using rule 5


State 59

	DataDecl -> DataDecl Id '::' Id ';' .               (rule 6)

	'}'            reduce using rule 6
	id             reduce using rule 6


State 60

	RetVals -> RetVals ',' PTy .                        (rule 14)

	'{'            reduce using rule 14
	','            reduce using rule 14


State 61

	StmtList -> StmtList Stmt .                         (rule 17)

	'read'         reduce using rule 17
	'print'        reduce using rule 17
	'if'           reduce using rule 17
	'return'       reduce using rule 17
	'iterate'      reduce using rule 17
	'skip'         reduce using rule 17
	'}'            reduce using rule 17
	id             reduce using rule 17


State 62

	Stmt -> MultAtrib . '=' Id '(' Exps1 ')' '[' Exps1 ']' ';'    (rule 21)

	'='            shift, and enter state 102


State 63

	Stmt -> IdAtrib . '=' Exp ';'                       (rule 20)
	MultAtrib -> IdAtrib . ',' MultAtrib1               (rule 32)

	'='            shift, and enter state 100
	','            shift, and enter state 101


State 64

	Stmt -> Id . '::' PTy ';'                           (rule 22)
	Stmt -> Id . '::' Id ';'                            (rule 24)
	Stmt -> Id . '(' Exps1 ')' FuncReturns ';'          (rule 31)
	Regist -> Id .                                      (rule 45)

	'::'           shift, and enter state 98
	'('            shift, and enter state 99
	'.'            reduce using rule 45


State 65

	Stmt -> RegistS . '=' Exp ';'                       (rule 23)
	MultAtrib -> RegistS . ',' MultAtrib1               (rule 33)

	'='            shift, and enter state 96
	','            shift, and enter state 97


State 66

	RegistS -> Regist . '.' Id                          (rule 41)
	RegistS -> Regist . '.' id '@' '[' Exps ']'         (rule 42)
	Regist -> Regist . '.' Id                           (rule 43)
	Regist -> Regist . '.' id '@' '[' Exps ']'          (rule 44)

	'.'            shift, and enter state 95


State 67

	Stmt -> 'read' . Id ';'                             (rule 28)

	id             shift, and enter state 6

	Id             goto state 94

State 68

	Stmt -> 'print' . Exp ';'                           (rule 27)

	floatNum       shift, and enter state 80
	num            shift, and enter state 81
	char           shift, and enter state 82
	'true'         shift, and enter state 83
	'false'        shift, and enter state 84
	'null'         shift, and enter state 85
	'new'          shift, and enter state 86
	'-'            shift, and enter state 87
	'!'            shift, and enter state 88
	'('            shift, and enter state 89
	id             shift, and enter state 6

	Id             goto state 77
	RegistS        goto state 78
	Regist         goto state 66
	Exp            goto state 93

State 69

	Stmt -> 'if' . Exp 'then' CodeBlock                 (rule 25)
	Stmt -> 'if' . Exp 'then' CodeBlock 'else' CodeBlock    (rule 26)

	floatNum       shift, and enter state 80
	num            shift, and enter state 81
	char           shift, and enter state 82
	'true'         shift, and enter state 83
	'false'        shift, and enter state 84
	'null'         shift, and enter state 85
	'new'          shift, and enter state 86
	'-'            shift, and enter state 87
	'!'            shift, and enter state 88
	'('            shift, and enter state 89
	id             shift, and enter state 6

	Id             goto state 77
	RegistS        goto state 78
	Regist         goto state 66
	Exp            goto state 92

State 70

	Stmt -> 'return' . Exps1 ';'                        (rule 30)

	floatNum       shift, and enter state 80
	num            shift, and enter state 81
	char           shift, and enter state 82
	'true'         shift, and enter state 83
	'false'        shift, and enter state 84
	'null'         shift, and enter state 85
	'new'          shift, and enter state 86
	'-'            shift, and enter state 87
	'!'            shift, and enter state 88
	'('            shift, and enter state 89
	';'            reduce using rule 74
	','            reduce using rule 74
	id             shift, and enter state 6

	Id             goto state 77
	RegistS        goto state 78
	Regist         goto state 66
	Exps1          goto state 90
	Exp            goto state 91

State 71

	Stmt -> 'iterate' . Exp CodeBlock                   (rule 29)

	floatNum       shift, and enter state 80
	num            shift, and enter state 81
	char           shift, and enter state 82
	'true'         shift, and enter state 83
	'false'        shift, and enter state 84
	'null'         shift, and enter state 85
	'new'          shift, and enter state 86
	'-'            shift, and enter state 87
	'!'            shift, and enter state 88
	'('            shift, and enter state 89
	id             shift, and enter state 6

	Id             goto state 77
	RegistS        goto state 78
	Regist         goto state 66
	Exp            goto state 79

State 72

	Stmt -> 'skip' . ';'                                (rule 19)

	';'            shift, and enter state 76


State 73

	CodeBlock -> '{' StmtList '}' .                     (rule 16)

	'data'         reduce using rule 16
	'read'         reduce using rule 16
	'print'        reduce using rule 16
	'if'           reduce using rule 16
	'else'         reduce using rule 16
	'return'       reduce using rule 16
	'iterate'      reduce using rule 16
	'skip'         reduce using rule 16
	'}'            reduce using rule 16
	id             reduce using rule 16
	%eof           reduce using rule 16


State 74

	IdAtrib -> id .                                     (rule 38)
	IdAtrib -> id . '[' Exps ']'                        (rule 39)
	Id -> id .                                          (rule 40)

	'::'           reduce using rule 40
	'('            reduce using rule 40
	'['            shift, and enter state 75
	'='            reduce using rule 38
	','            reduce using rule 38
	'.'            reduce using rule 40


State 75

	IdAtrib -> id '[' . Exps ']'                        (rule 39)

	floatNum       shift, and enter state 80
	num            shift, and enter state 81
	char           shift, and enter state 82
	'true'         shift, and enter state 83
	'false'        shift, and enter state 84
	'null'         shift, and enter state 85
	'new'          shift, and enter state 86
	'-'            shift, and enter state 87
	'!'            shift, and enter state 88
	'('            shift, and enter state 89
	'@'            shift, and enter state 144
	id             shift, and enter state 6

	Id             goto state 77
	RegistS        goto state 78
	Regist         goto state 66
	Exps           goto state 142
	Exp            goto state 143

State 76

	Stmt -> 'skip' ';' .                                (rule 19)
